After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766870 - rtpj2kpay: leaks input buffer
rtpj2kpay: leaks input buffer
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.8.1
Other Linux
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-25 15:11 UTC by Pierre Lamot
Modified: 2016-05-27 12:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpj2kpay: Fix buffer memory leak (771 bytes, patch)
2016-05-25 15:16 UTC, Pierre Lamot
committed Details | Review

Description Pierre Lamot 2016-05-25 15:11:10 UTC
rtpj2kpay leaks memory buffers

sample pipeline:

gst-launch-1.0 videotestsrc ! video/x-raw,width=1280,height=800,framerate=30/1 ! openjpegenc ! rtpj2kpay ! fakesink


In the create callback in rtpj2kpay, input buffer is mapped for reading but is not unmapped. This results in a leaks of the underlying GstMemory
Comment 1 Pierre Lamot 2016-05-25 15:16:25 UTC
Created attachment 328515 [details] [review]
rtpj2kpay: Fix buffer memory leak
Comment 2 Tim-Philipp Müller 2016-05-27 12:01:06 UTC
Thanks for the patch!

commit eaf329d39bef5acdad7748f74b81c7ad2856ae00
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri May 27 12:49:32 2016 +0100

    tests: add unit test for JPEG-2000 rtp payloader leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766870

commit 3c50fd7669c989086cc1850a812e61bdcd666481
Author: Pierre Lamot <pierre.lamot@openwide.fr>
Date:   Wed May 25 17:11:13 2016 +0200

    rtpj2kpay: Fix buffer memory leak
    
    Input buffer memory was not unmapped
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766870