rtpj2kpay: Fix buffer memory leak

Input buffer memory was not unmapped

https://bugzilla.gnome.org/show_bug.cgi?id=766870